# DragonFlyAutomator

./: 384.pkl  After_norm.csv  Homography_method_comparison.rtf  LICENSE.md  Notes.pptx  README.md  camera.py  custom_logger.py  dependencies_linux_qt6  elcvia.sty  fusionrest.py  gui.py  mit-test.py  requirements.txt  script.py  setup.cfg  well_plate_data  wellplate.py  xyz_stage.py
DragonFlyAutomator/: pyvenv.cfg
RestAPI/: fusionrest.py  mit-test.py
dependencies/: notes
devices/: CoordinateTransforms.py  camera.py  helperfunctions.py  image_based_autofocus.py  micrscope.py  protocol.py  wellplate.py  xyz_stage.py  xyzstage.py
endpoint_outputs/: Bottom left_xposition.json  Devices.json  Middle_yposition.json  Top right_xposition.json  analoguecontrol.json  confocal-unit.json  important_code_to_instantiate_python_environment.txt  ixon_ccd2.txt  output_successful_test.txt  protocol_current.json  triggermode.json  yposition.json
endpoints/: output_successful_test.txt
figures/: dt.csv
gui/: FrameSwitcher.py  GUI_Protocol.py  GUI_WellPlate.py  MainWindow.py  Visualisation.py  config.py  helperfunctions.py  untitled.py  visualisation.py
models/: 384.pkl  384_WellPlate_12345_Falcon.json  384_WellPlate_7777_Falcon.json  384_WellPlate_Falcon_123456.json  384_WellPlate_Falcon_2.json  384_WellPlate_Falcon_3.json  384_falcon_wellplate.json  96_WellPlate_Falcon_1.json
notebooks/: Display384CoordinatePlot.ipynb  plot_visualizer.py
sources/: swagger.json  test.py
test_rn/: df.csv
well_B1/: well_plate_data.csv
well_G12/: well_plate_data.csv
(+404 files in other folders)
