[metadata]
name = DragonFlyAutomator
version = 0.0.1


[options.entry_points]
console_scripts =
    DragonFlyAutomator = DragonFlyWellPlateAutomation:main
    
    
[options]
install_requires =
    imaris_ims_file_reader==0.1.8
    matplotlib==3.7.2
    numpy==1.24.4
    opencv_python==4.9.0.80
    pandas==2.0.3
    ProjectRoot==0.0.6
    PyQt6==6.7.0
    PyQt6_sip==13.6.0
    Requests==2.32.3

python_requires = >=3.8.19
packages = find_namespace:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src


[options.package_data]
* = data/**/*

[options.extras_require]
dev =
    pytest>=6.2.2
    
    

[project.urls]
Homepage = "https://github.com/Ibrahim-norbert/348_wellplate_automation"
Issues = "https://github.com/Ibrahim-norbert/348_wellplate_automation/issues"


